--- a/scss/build.scss
+++ b/scss/build.scss
@@ -5,7 +5,7 @@
 @import "global.scss";
 @import "navbar.scss";
 @import "masthead.scss";
-@import "features";
+@import "hiw";
 @import "subscribe";
 @import "contact.scss";
 @import "footer.scss";
