--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -18,8 +18,8 @@ $colorAccent: #F09819;
 $colorAccentDark: #FF5858;
 $colorAccent2: #22E1FF;
 $colorAccent2Dark: #625EB1;
-$colorAccent3: #9BE15D;
-$colorAccent3Dark: #00E3AE;
+$colorAccent3: #42E695;
+$colorAccent3Dark: #3BB2B8;
 $textPrimaryColor: #2A2B37;
 $textSecondaryColor: #FFFFFF;
 
