--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -56,7 +56,6 @@ section {
     padding: 0px !important;
 }
 
-.gradients{
-    background: url("../img/grads.svg") center bottom no-repeat;
-    background-size: cover;
+#footer-curve{
+    margin-bottom: -10px !important;
 }
