--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,8 @@
 footer {
     padding: 25px 0;
     text-align: center;
-    color: fade-out($textPrimaryColor, .4);
+    color: fade-out($textSecondaryColor, .4);
+    background: $textPrimaryColor;
 
     p {
         font-size: 12px;
@@ -13,7 +14,7 @@ footer {
         li {
             a {
                 font-size: 12px;
-                color: fade-out($textPrimaryColor, .7);
+                color: fade-out($textSecondaryColor, .7);
                 &:hover,
                 &:focus,
                 &:active,
@@ -25,6 +26,6 @@ footer {
     }
 
     .external-copyright{
-        color: fade-out($textPrimaryColor, .6);
+        color: fade-out($textSecondaryColor, .6);
     }
 }
