--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -7,4 +7,25 @@ section.gallery {
     .btn-upload-art{
 
     }
+
+    .flex-column {
+        @media screen and (max-width: 500px) {
+            max-width: 170px;
+        }
+        @media screen and (min-width: 510px) {
+            max-width: 300px;
+        }
+        @media screen and (min-width: 1000px) {
+            max-width: 400px;
+        }
+        @media screen and (min-width: 2000px) {
+            max-width: 500px;
+        }
+
+    }
+
+    .gallery-img {
+
+    }
+
 }
