--- a/scss/build.css
+++ b/scss/build.css
@@ -62,7 +62,7 @@
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.5); }
 
 .btn-accent {
-  color: rgba(255, 255, 255, 0.8);
+  color: #FFFFFF;
   background: #F09819;
   /* Old browsers */
   background: -moz-linear-gradient(45deg, #F09819 0%, #FF5858 100%);
@@ -87,7 +87,7 @@
     /* IE6-9 fallback on horizontal gradient */ }
 
 .btn-accent-2 {
-  color: rgba(255, 255, 255, 0.8);
+  color: #FFFFFF;
   background: #22E1FF;
   /* Old browsers */
   background: -moz-linear-gradient(45deg, #22E1FF 0%, #625EB1 100%);
@@ -168,6 +168,9 @@ section {
 
 #footer-curve {
   margin-bottom: -10px !important; }
+
+.title-underlying {
+  height: 12px; }
 
 #mainNav {
   padding-top: 16px;
