--- a/scss/build.css
+++ b/scss/build.css
@@ -261,6 +261,9 @@ header.masthead {
   header.masthead .masthead-content {
     position: absolute;
     bottom: 30px; }
+    @media (min-width: 992px) {
+      header.masthead .masthead-content {
+        bottom: 15vh; } }
   @media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
     header.masthead {
       background: url("../img/cover-sm.jpg") center;
@@ -269,51 +272,42 @@ header.masthead {
     header.masthead {
       background: url("../img/cover-sm.jpg") center;
       background-size: cover; } }
-  header.masthead .os-info {
-    padding-left: 6px; }
-    header.masthead .os-info p {
-      padding-top: 14px;
-      font-size: 16px;
-      color: #FFFFFF; }
-    header.masthead .os-info img {
-      width: 24px;
-      height: auto; }
   header.masthead .content h1 {
     font-weight: 700;
     color: #FFFFFF;
     line-height: 1.4em; }
     @media (max-width: 576px) {
       header.masthead .content h1 {
-        font-size: 32px; } }
+        font-size: 38px; } }
     @media (min-width: 576px) {
       header.masthead .content h1 {
-        font-size: 36px; } }
+        font-size: 42px; } }
     @media (min-width: 768px) {
       header.masthead .content h1 {
-        font-size: 48px; } }
+        font-size: 54px; } }
     @media (min-width: 992px) {
       header.masthead .content h1 {
-        font-size: 56px; } }
+        font-size: 62px; } }
     @media (min-width: 1200px) {
       header.masthead .content h1 {
-        font-size: 64px; } }
+        font-size: 70px; } }
   header.masthead .content h2 {
     color: rgba(255, 255, 255, 0.8); }
     @media (max-width: 576px) {
       header.masthead .content h2 {
-        font-size: 16px; } }
+        font-size: 20px; } }
     @media (min-width: 576px) {
       header.masthead .content h2 {
-        font-size: 18px; } }
+        font-size: 24px; } }
     @media (min-width: 768px) {
       header.masthead .content h2 {
-        font-size: 20px; } }
+        font-size: 26px; } }
     @media (min-width: 992px) {
       header.masthead .content h2 {
-        font-size: 22px; } }
+        font-size: 28px; } }
     @media (min-width: 1200px) {
       header.masthead .content h2 {
-        font-size: 24px; } }
+        font-size: 30px; } }
 
 section.hiw-mobile .section-heading,
 section.hiw-desktop .section-heading {
