--- a/scss/_hiw.scss
+++ b/scss/_hiw.scss
@@ -29,18 +29,36 @@ section.hiw-desktop{
             background: url("../img/hiw-shape-1.svg") top center no-repeat;
             -webkit-background-size: contain;
             background-size: contain;
+
+            @media (min-width: 992px){ // lg
+                background: url("../img/hiw-shape-lg-1.svg") center center no-repeat;
+                -webkit-background-size: contain;
+                background-size: contain;
+            }
         }
 
         .hiw-shape-2{
             background: url("../img/hiw-shape-2.svg") top center no-repeat;
             -webkit-background-size: contain;
             background-size: contain;
+
+            @media (min-width: 992px){ // lg
+                background: url("../img/hiw-shape-lg-2.svg") center center no-repeat;
+                -webkit-background-size: contain;
+                background-size: contain;
+            }
         }
 
         .hiw-shape-3{
             background: url("../img/hiw-shape-3.svg") top center no-repeat;
             -webkit-background-size: contain;
             background-size: contain;
+
+            @media (min-width: 992px){ // lg
+                background: url("../img/hiw-shape-lg-3.svg") center center no-repeat;
+                -webkit-background-size: contain;
+                background-size: contain;
+            }
         }
     }
 }
