--- a/scss/build.css
+++ b/scss/build.css
@@ -159,7 +159,7 @@ p {
   margin-bottom: 20px; }
 
 section {
-  padding: 100px 0; }
+  padding: 40px 0; }
   section h2 {
     font-size: 50px; }
 
@@ -292,7 +292,7 @@ header.masthead {
       header.masthead .content h1 {
         font-size: 70px; } }
   header.masthead .content h2 {
-    color: rgba(255, 255, 255, 0.8); }
+    color: #FFFFFF; }
     @media (max-width: 576px) {
       header.masthead .content h2 {
         font-size: 20px; } }
@@ -333,6 +333,14 @@ section.hiw-desktop .hiw-business .hiw-shape-1 {
   background: url("../img/hiw-shape-1.svg") top center no-repeat;
   -webkit-background-size: contain;
   background-size: contain; }
+  @media (min-width: 992px) {
+    section.hiw-mobile .hiw-artist .hiw-shape-1,
+    section.hiw-mobile .hiw-business .hiw-shape-1,
+    section.hiw-desktop .hiw-artist .hiw-shape-1,
+    section.hiw-desktop .hiw-business .hiw-shape-1 {
+      background: url("../img/hiw-shape-lg-1.svg") center center no-repeat;
+      -webkit-background-size: contain;
+      background-size: contain; } }
 section.hiw-mobile .hiw-artist .hiw-shape-2,
 section.hiw-mobile .hiw-business .hiw-shape-2,
 section.hiw-desktop .hiw-artist .hiw-shape-2,
@@ -340,6 +348,14 @@ section.hiw-desktop .hiw-business .hiw-shape-2 {
   background: url("../img/hiw-shape-2.svg") top center no-repeat;
   -webkit-background-size: contain;
   background-size: contain; }
+  @media (min-width: 992px) {
+    section.hiw-mobile .hiw-artist .hiw-shape-2,
+    section.hiw-mobile .hiw-business .hiw-shape-2,
+    section.hiw-desktop .hiw-artist .hiw-shape-2,
+    section.hiw-desktop .hiw-business .hiw-shape-2 {
+      background: url("../img/hiw-shape-lg-2.svg") center center no-repeat;
+      -webkit-background-size: contain;
+      background-size: contain; } }
 section.hiw-mobile .hiw-artist .hiw-shape-3,
 section.hiw-mobile .hiw-business .hiw-shape-3,
 section.hiw-desktop .hiw-artist .hiw-shape-3,
@@ -347,6 +363,14 @@ section.hiw-desktop .hiw-business .hiw-shape-3 {
   background: url("../img/hiw-shape-3.svg") top center no-repeat;
   -webkit-background-size: contain;
   background-size: contain; }
+  @media (min-width: 992px) {
+    section.hiw-mobile .hiw-artist .hiw-shape-3,
+    section.hiw-mobile .hiw-business .hiw-shape-3,
+    section.hiw-desktop .hiw-artist .hiw-shape-3,
+    section.hiw-desktop .hiw-business .hiw-shape-3 {
+      background: url("../img/hiw-shape-lg-3.svg") center center no-repeat;
+      -webkit-background-size: contain;
+      background-size: contain; } }
 
 section#subscribe form {
   padding: 24px 32px;
