--- a/scss/_hiw.scss
+++ b/scss/_hiw.scss
@@ -1,7 +1,6 @@
 // Styling for the features section
 
-section.hiw-mobile,
-section.hiw-desktop{
+section.hiw{
 
     .section-heading {
         margin-bottom: 20px;
