--- a/scss/build.css
+++ b/scss/build.css
@@ -309,65 +309,48 @@ header.masthead {
       header.masthead .content h2 {
         font-size: 30px; } }
 
-section.hiw-mobile .section-heading,
-section.hiw-desktop .section-heading {
+section.hiw .section-heading {
   margin-bottom: 20px; }
-  section.hiw-mobile .section-heading h4,
-  section.hiw-desktop .section-heading h4 {
+  section.hiw .section-heading h4 {
     margin-top: 0;
     color: #2A2B37; }
-  section.hiw-mobile .section-heading p,
-  section.hiw-desktop .section-heading p {
+  section.hiw .section-heading p {
     margin-bottom: 0;
     color: rgba(42, 43, 55, 0.6); }
-section.hiw-mobile .hiw-step,
-section.hiw-desktop .hiw-step {
+section.hiw .hiw-step {
   height: 280px; }
-  section.hiw-mobile .hiw-step p,
-  section.hiw-desktop .hiw-step p {
+  section.hiw .hiw-step p {
     color: rgba(42, 43, 55, 0.6); }
-section.hiw-mobile .hiw-artist .hiw-shape-1,
-section.hiw-mobile .hiw-business .hiw-shape-1,
-section.hiw-desktop .hiw-artist .hiw-shape-1,
-section.hiw-desktop .hiw-business .hiw-shape-1 {
+section.hiw .hiw-artist .hiw-shape-1,
+section.hiw .hiw-business .hiw-shape-1 {
   background: url("../img/hiw-shape-1.svg") top center no-repeat;
   -webkit-background-size: contain;
   background-size: contain; }
   @media (min-width: 992px) {
-    section.hiw-mobile .hiw-artist .hiw-shape-1,
-    section.hiw-mobile .hiw-business .hiw-shape-1,
-    section.hiw-desktop .hiw-artist .hiw-shape-1,
-    section.hiw-desktop .hiw-business .hiw-shape-1 {
+    section.hiw .hiw-artist .hiw-shape-1,
+    section.hiw .hiw-business .hiw-shape-1 {
       background: url("../img/hiw-shape-lg-1.svg") center center no-repeat;
       -webkit-background-size: contain;
       background-size: contain; } }
-section.hiw-mobile .hiw-artist .hiw-shape-2,
-section.hiw-mobile .hiw-business .hiw-shape-2,
-section.hiw-desktop .hiw-artist .hiw-shape-2,
-section.hiw-desktop .hiw-business .hiw-shape-2 {
+section.hiw .hiw-artist .hiw-shape-2,
+section.hiw .hiw-business .hiw-shape-2 {
   background: url("../img/hiw-shape-2.svg") top center no-repeat;
   -webkit-background-size: contain;
   background-size: contain; }
   @media (min-width: 992px) {
-    section.hiw-mobile .hiw-artist .hiw-shape-2,
-    section.hiw-mobile .hiw-business .hiw-shape-2,
-    section.hiw-desktop .hiw-artist .hiw-shape-2,
-    section.hiw-desktop .hiw-business .hiw-shape-2 {
+    section.hiw .hiw-artist .hiw-shape-2,
+    section.hiw .hiw-business .hiw-shape-2 {
       background: url("../img/hiw-shape-lg-2.svg") center center no-repeat;
       -webkit-background-size: contain;
       background-size: contain; } }
-section.hiw-mobile .hiw-artist .hiw-shape-3,
-section.hiw-mobile .hiw-business .hiw-shape-3,
-section.hiw-desktop .hiw-artist .hiw-shape-3,
-section.hiw-desktop .hiw-business .hiw-shape-3 {
+section.hiw .hiw-artist .hiw-shape-3,
+section.hiw .hiw-business .hiw-shape-3 {
   background: url("../img/hiw-shape-3.svg") top center no-repeat;
   -webkit-background-size: contain;
   background-size: contain; }
   @media (min-width: 992px) {
-    section.hiw-mobile .hiw-artist .hiw-shape-3,
-    section.hiw-mobile .hiw-business .hiw-shape-3,
-    section.hiw-desktop .hiw-artist .hiw-shape-3,
-    section.hiw-desktop .hiw-business .hiw-shape-3 {
+    section.hiw .hiw-artist .hiw-shape-3,
+    section.hiw .hiw-business .hiw-shape-3 {
       background: url("../img/hiw-shape-lg-3.svg") center center no-repeat;
       -webkit-background-size: contain;
       background-size: contain; } }
