--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -47,8 +47,11 @@ p {
 
 section {
     padding: 40px 0;
+}
+
+.section-heading{
     h2 {
-        font-size: 50px;
+        font-size: 48px;
     }
 }
 
