--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -1,8 +1,11 @@
 // Styling for the gallery section
 section.gallery {
 
-    .btn-upload-art{
-
+    .btn-upload-art-float{
+        @media (min-width: 768px){ // md
+            position: absolute;
+            right:0;
+        }
     }
 
     .flex-column {
@@ -19,6 +22,27 @@ section.gallery {
             max-width: 500px;
         }
 
+        /* Fede: use boostrap standard queries
+        @media (max-width: 576px){ // xs
+            font-size: 38px;
+        }
+
+        @media (min-width: 576px){ // sm
+            font-size: 42px;
+        }
+
+        @media (min-width: 768px){ // md
+            font-size: 54px;
+        }
+
+        @media (min-width: 992px){ // lg
+            font-size: 62px;
+        }
+
+        @media (min-width: 1200px){ // xl
+            font-size: 70px;
+        }
+        */
     }
 
 }
