--- a/scss/_faq.scss
+++ b/scss/_faq.scss
@@ -5,4 +5,12 @@ section.faq {
         margin-bottom: 30px;
     }
 
+    h4 {
+        font-weight: bold;
+    }
+
+    a {
+        color: $colorAccent3Dark;
+    }
+
 }
